# Chrome-Password-Stealer

./: CMakeLists.txt
Password_stealer/: CMakeLists.txt  Dumper.cpp  Dumper.h  Main.cpp  Main.h  Sender.cpp  Sender.h
cookieVS/: CMakeLists.txt  Dumper.cpp  Dumper.h  GetPassword.cpp  GetPassword.h  test.cpp  test.h
passwordServer/: main.py  requirements.txt
